--- a/Ex14/TabSelector/app/src/main/res/values/themes.xml
+++ b/Ex14/TabSelector/app/src/main/res/values/themes.xml
@@ -1,9 +1,9 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.TabSelector" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Base.Theme.Tabselector" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
 
-    <style name="Theme.TabSelector" parent="Base.Theme.TabSelector" />
+    <style name="Theme.Tabselector" parent="Base.Theme.Tabselector" />
 </resources>
