--- a/Ex10/app/src/main/res/values/themes.xml
+++ b/Ex10/app/src/main/res/values/themes.xml
@@ -1,9 +1,9 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.Intent_BroadcastReceiver" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Base.Theme.Ex10" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
 
-    <style name="Theme.Intent_BroadcastReceiver" parent="Base.Theme.Intent_BroadcastReceiver" />
+    <style name="Theme.Ex10" parent="Base.Theme.Ex10" />
 </resources>
