--- a/Ex17/app/src/main/res/values/themes.xml
+++ b/Ex17/app/src/main/res/values/themes.xml
@@ -1,9 +1,9 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.Ex17" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Base.Theme.CopdyDB" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
 
-    <style name="Theme.Ex17" parent="Base.Theme.Ex17" />
+    <style name="Theme.CopdyDB" parent="Base.Theme.CopdyDB" />
 </resources>
