--- a/Ex18/app/src/main/res/values/themes.xml
+++ b/Ex18/app/src/main/res/values/themes.xml
@@ -1,9 +1,9 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.Ex18" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Base.Theme.Karaoke" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
 
-    <style name="Theme.Ex18" parent="Base.Theme.Ex18" />
+    <style name="Theme.Karaoke" parent="Base.Theme.Karaoke" />
 </resources>
