--- a/Ex19/app/src/main/res/values/themes.xml
+++ b/Ex19/app/src/main/res/values/themes.xml
@@ -1,9 +1,9 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.Ex19" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Base.Theme.XMLReader" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
 
-    <style name="Theme.Ex19" parent="Base.Theme.Ex19" />
+    <style name="Theme.XMLReader" parent="Base.Theme.XMLReader" />
 </resources>
