--- a/Ex20/app/src/main/res/values/themes.xml
+++ b/Ex20/app/src/main/res/values/themes.xml
@@ -1,9 +1,9 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.Ex20" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Base.Theme.AsyncTask" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
 
-    <style name="Theme.Ex20" parent="Base.Theme.Ex20" />
+    <style name="Theme.AsyncTask" parent="Base.Theme.AsyncTask" />
 </resources>
