--- a/Ex21/app/src/main/res/values/themes.xml
+++ b/Ex21/app/src/main/res/values/themes.xml
@@ -1,9 +1,9 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.Ex21" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Base.Theme.Read_JSON" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
 
-    <style name="Theme.Ex21" parent="Base.Theme.Ex21" />
+    <style name="Theme.Read_JSON" parent="Base.Theme.Read_JSON" />
 </resources>
