--- a/Ex22/app/src/main/res/values/themes.xml
+++ b/Ex22/app/src/main/res/values/themes.xml
@@ -1,9 +1,9 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.Ex22" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Base.Theme.InternetWorking" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
 
-    <style name="Theme.Ex22" parent="Base.Theme.Ex22" />
+    <style name="Theme.InternetWorking" parent="Base.Theme.InternetWorking" />
 </resources>
