--- a/Ex23/app/src/main/res/values/themes.xml
+++ b/Ex23/app/src/main/res/values/themes.xml
@@ -1,9 +1,9 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.Ex23" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Base.Theme.ReadNews" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
 
-    <style name="Theme.Ex23" parent="Base.Theme.Ex23" />
+    <style name="Theme.ReadNews" parent="Base.Theme.ReadNews" />
 </resources>
